...
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/sansation_bold"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="Event Description: This is a sample description for the event." />

        <!-- Divider -->

        <!-- Event Date and Time -->
        <LinearLayout
            android:layout_width="match_parent"
...
