...
                        android:layout_marginStart="26dp"/>

                    <TextView
                        android:id="@+id/waitlistedParticipants"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:text="100"
                        android:textColor="#212121"
                        android:fontFamily="@font/sansation_bold"
                        android:background="@drawable/text_background"
                        android:textSize="16sp"
                        android:layout_weight="0.2"
                        android:layout_gravity="center"
...
