...
                    android:background="@drawable/admin_control"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/admin_control"/>
            </LinearLayout>

            <TextView
                android:id="@+id/events_dropdown_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_events"
                android:textColor="#FFFFFF"
                android:backgroundTint="#333333"
                android:background="@drawable/edit_text_background"
...
                android:padding="12dp"
                android:gravity="center_vertical"
                android:onClick="toggleEventsDropdown"
                app:drawableEndCompat="@drawable/ic_expand_more" />

            <LinearLayout
                android:id="@+id/events_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/dropdown_background"
                android:visibility="gone"
...
                    android:background="@drawable/admin_control"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/admin_control" />
            </LinearLayout>

            <TextView
                android:id="@+id/users_dropdown_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_users"
                android:textColor="#FFFFFF"
                android:backgroundTint="#333333"
                android:fontFamily="@font/sansation_bold"
...
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:onClick="toggleUsersDropdown"
                app:drawableEndCompat="@drawable/ic_expand_more" />

            <LinearLayout
                android:id="@+id/users_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dropdown_background"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
...
                    android:background="@drawable/admin_control"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/admin_control" />
            </LinearLayout>

            <TextView
                android:id="@+id/facilities_dropdown_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_facilities"
                android:textColor="#FFFFFF"
                android:backgroundTint="#333333"
                android:fontFamily="@font/sansation_bold"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2A2A2A"
                android:layout_marginVertical="12dp" />

            <LinearLayout
                android:id="@+id/facilities_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dropdown_background"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Dashboard Icon -->
        <ImageView
            android:id="@+id/icon_dashboard"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/dashboard"
            android:src="@drawable/dashboard"
            android:layout_gravity="center_vertical"
            app:tint="@color/white" />

        <!-- Reports Icon -->
        <ImageView
            android:id="@+id/icon_reports"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/reports"
            android:src="@drawable/report"
...
